tests/compile_fail/invalid_align_attr.stderr
error: expected attribute arguments in parentheses: #[align(...)]
 --> tests/compile_fail/invalid_align_attr.rs:5:10
  |
5 | #[derive(ShaderType)]
  |          ^^^^^^^^^^
  |
  = note: this error originates in the derive macro `ShaderType` (in Nightly builds, run with -Z macro-backtrace for more info)

error: expected a power of 2 u32 literal
 --> tests/compile_fail/invalid_align_attr.rs:9:12
  |
9 |     #[align()]
  |            ^^

error: expected a power of 2 u32 literal
  --> tests/compile_fail/invalid_align_attr.rs:11:12
   |
11 |     #[align(invalid)]
   |            ^^^^^^^^^

error: expected a power of 2 u32 literal
  --> tests/compile_fail/invalid_align_attr.rs:13:12
   |
13 |     #[align(3)]
   |            ^^^
